# AIAgents4Pharma

./: .coveragerc  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  requirements.txt
aiagents4pharma/talk2aiagents4pharma/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  install.md  pyproject.toml  startup.sh
aiagents4pharma/talk2aiagents4pharma/agents/: __init__.py  main_agent.py
aiagents4pharma/talk2aiagents4pharma/configs/: __init__.py  config.yaml
aiagents4pharma/talk2aiagents4pharma/configs/agents/: __init__.py
aiagents4pharma/talk2aiagents4pharma/states/: __init__.py  state_talk2aiagents4pharma.py
aiagents4pharma/talk2aiagents4pharma/tests/: test_main_agent.py
aiagents4pharma/talk2biomodels/: Dockerfile  README.md  __init__.py  pyproject.toml
aiagents4pharma/talk2biomodels/agents/: __init__.py  t2b_agent.py
aiagents4pharma/talk2biomodels/api/: __init__.py  kegg.py  ols.py  uniprot.py
aiagents4pharma/talk2biomodels/configs/: __init__.py  config.yaml
aiagents4pharma/talk2biomodels/configs/agents/: __init__.py
aiagents4pharma/talk2biomodels/configs/tools/: __init__.py
aiagents4pharma/talk2biomodels/models/: __init__.py  basico_model.py  sys_bio_model.py  test.ipynb
aiagents4pharma/talk2biomodels/states/: __init__.py  state_talk2biomodels.py
aiagents4pharma/talk2biomodels/tests/: __init__.py  test_api.py  test_ask_question.py  test_basico_model.py  test_custom_plotter.py  test_fetch_params.py  test_get_annotation.py  test_getmodelinfo.py  test_integration.py  test_langgraph.py  test_load_biomodel.py  test_model_description.py  test_param_scan.py  test_query_article.py  test_search_models.py  test_simulate_model.py  test_steady_state.py  test_sys_bio_model.py
aiagents4pharma/talk2biomodels/tools/: __init__.py  ask_question.py  custom_plotter.py  fetch_parameters.py  get_annotation.py  get_modelinfo.py  load_arguments.py  load_biomodel.py  model_description.py  parameter_scan.py  plot_figure.py  query_article.py  search_models.py  simulate_model.py  steady_state.py  utils.py
aiagents4pharma/talk2cells/: __init__.py  pyproject.toml  requirements.txt
aiagents4pharma/talk2cells/agents/: scp_agent.py
aiagents4pharma/talk2cells/states/: __init__.py  state_talk2cells.py
aiagents4pharma/talk2cells/tests/scp_agent/: test_scp_agent.py
aiagents4pharma/talk2cells/tools/: __init__.py
aiagents4pharma/talk2cells/tools/scp_agent/: __init__.py  display_studies.py  search_studies.py
aiagents4pharma/talk2knowledgegraphs/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  startup.sh
aiagents4pharma/talk2knowledgegraphs/agents/: __init__.py  t2kg_agent.py
aiagents4pharma/talk2knowledgegraphs/configs/: __init__.py  config.yaml
aiagents4pharma/talk2knowledgegraphs/configs/app/: __init__.py
aiagents4pharma/talk2knowledgegraphs/configs/tools/: __init__.py
aiagents4pharma/talk2knowledgegraphs/datasets/: __init__.py  biobridge_primekg.py  dataset.py  primekg.py  starkqa_primekg.py
aiagents4pharma/talk2knowledgegraphs/states/: __init__.py  state_talk2knowledgegraphs.py
aiagents4pharma/talk2knowledgegraphs/tests/: test_agents_t2kg_agent.py  test_biobridge_primekg_loader.py  test_datasets_biobridge_primekg.py  test_datasets_dataset.py  test_datasets_primekg.py  test_datasets_starkqa_primekg.py  test_primekg_loader.py  test_starkqa_primekg_loader.py  test_tools_graphrag_reasoning.py  test_tools_multimodal_subgraph_extraction.py  test_tools_subgraph_extraction.py  test_tools_subgraph_summarization.py  test_utils_embeddings_embeddings.py  test_utils_embeddings_huggingface.py  test_utils_embeddings_nim_molmim.py  test_utils_embeddings_ollama.py  test_utils_embeddings_sentencetransformer.py  test_utils_enrichments_enrichments.py  test_utils_enrichments_ollama.py  test_utils_enrichments_ols.py  test_utils_enrichments_pubchem.py  test_utils_enrichments_reactome.py  test_utils_enrichments_uniprot.py  test_utils_kg_utils.py  test_utils_pubchem_utils.py
aiagents4pharma/talk2knowledgegraphs/tests/files/: adalimumab.md  biobridge_multimodal_text_graph.pkl  multimodal-analysis.xlsx  (+1 more)
aiagents4pharma/talk2knowledgegraphs/tools/: __init__.py  graphrag_reasoning.py  load_arguments.py  multimodal_subgraph_extraction.py  primekg_loader.py  starkqa_primekg_loader.py  subgraph_extraction.py  subgraph_summarization.py
aiagents4pharma/talk2knowledgegraphs/utils/: __init__.py  kg_utils.py  pubchem_utils.py
aiagents4pharma/talk2scholars/: Dockerfile  __init__.py  install.md  pyproject.toml  requirements.txt
aiagents4pharma/talk2scholars/agents/: __init__.py  main_agent.py  paper_download_agent.py  pdf_agent.py  s2_agent.py  srh_test_agent.py  zotero_agent.py
aiagents4pharma/talk2scholars/config/: __init__.py
aiagents4pharma/talk2scholars/configs/: __init__.py  config.yaml
aiagents4pharma/talk2scholars/state/: __init__.py  state_talk2scholars.py
aiagents4pharma/talk2scholars/tests/: test_call_s2.py  test_call_zotero.py  test_integration.py  test_langgraph.py  test_llm_main_integration.py  test_main_agent.py  test_nvidia_nim_reranker_utils.py  test_paper_download_agent.py  test_paper_download_arxiv.py  test_paper_download_biorxiv.py  test_paper_download_medrxiv.py  test_paper_download_tool.py  test_paper_download_tools.py  test_paper_download_tools_pubmed.py  test_paper_retriever_tool.py  test_pdf_agent.py  test_question_and_answer_tool.py  test_read_helper_utils.py  test_routing_logic.py  test_s2_agent.py  test_s2_display.py  test_s2_display_dataframe.py  test_s2_multi.py  test_s2_query.py  test_s2_query_dataframe.py  test_s2_retrieve.py  test_s2_search.py  test_s2_single.py  test_s2_tools.py  test_s2_utils_ext_ids.py  test_state.py  test_tool_helper_utils.py  test_zotero_agent.py  test_zotero_human_in_the_loop.py  test_zotero_path.py  test_zotero_pdf_downloader_utils.py  test_zotero_read.py  test_zotero_tool.py  test_zotero_write.py
aiagents4pharma/talk2scholars/tools/: __init__.py
(+432 files in other folders)
