[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "AIAgents4Pharma"

description = "The main agent of AIAgents4Pharma universe"

readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "copasi_basico==0.78",
  "coverage==7.6.4",
  "einops==0.8.0",
  "gdown==5.2.0",
  "gravis==0.1.0",
  "huggingface_hub==0.26.5",
  "hydra-core==1.3.2",
  "joblib==1.4.2",
  "langchain==0.3.7",
  "langchain-community==0.3.5",
  "langchain-core==0.3.40",
  "langchain-experimental==0.3.3",
  "langchain-nvidia-ai-endpoints==0.3.9",
  "langchain-openai==0.2.5",
  "langchain_ollama==0.2.3",
  "langgraph_supervisor==0.0.4",
  "matplotlib==3.9.2",
  "openai==1.59.4",
  "ollama==0.4.7",
  "pandas==2.2.3",
  "pcst_fast==1.0.10",
  "plotly==5.24.1",
  "pubchempy==1.0.4",
  "pydantic==2.9.2",
  "pylint==3.3.1",
  "pypdf==5.2.0",
  "pytest==8.3.3",
  "pytest-asyncio==0.25.2",
  "pyzotero==1.6.9",
  "streamlit==1.39.0",
  "sentence_transformers==3.3.1",
  "tabulate==0.9.0",
  "torch==2.2.2",
  "torch_geometric==2.6.1",
  "tqdm==4.66.6",
  "transformers==4.48.0",
  "mkdocs==1.6.1",
  "mkdocs-jupyter==0.25.1",
  "mkdocs-material==9.5.47",
  "mkdocstrings-python==1.12.2",
  "mkdocs-include-markdown-plugin==7.1.2",
  "mkdocstrings==0.27.0",
  "streamlit-feedback",
  "anndata==0.11.3",
  "h5py==3.13.0",
  "igraph==0.11.8",
  "ipykernel==6.29.5",
  "ipython==8.32.0",
  "numpy==2.1.3",
  "nbformat==5.10.4",
  "scipy==1.15.2",
  "tqdm==4.67.1",
  "umap-learn==0.5.7",
  "plotly-express==0.4.1",
  "seaborn==0.13.2",
  "scanpy==1.11.0"
]
dynamic = ["version"]
 
# Package discovery for the submodule
[tool.setuptools]
packages = [
    "talk2aiagents4pharma",
    "talk2aiagents4pharma.configs",
    "talk2aiagents4pharma.agents",
    "talk2aiagents4pharma.states"
]