[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talk2cells"

description = "A submodule of AIAgents4Pharma for interacting with systems biology models "

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "cell2sentence==1.1.0",
    "gseapy==1.1.8",
    "pygeneconverter==0.3",
    "xlsxwriter==3.2.3",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "langchain-openai==0.3.0",
    "langgraph==0.2.62",
    "openai==1.59.6",
    "pandas==2.2.3",
    "pydantic==2.10.5",
    "requests==2.32.3",
    "streamlit==1.41.1",
    "tabulate==0.9.0",
    "anndata==0.11.3",
    "h5py==3.13.0",
    "igraph==0.11.8",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "numpy==2.1.3",
    "nbformat==5.10.4",
    "scipy==1.15.2",
    "tqdm==4.67.1",
    "umap-learn==0.5.7",
    "plotly-express==0.4.1",
    "seaborn==0.13.2",
    "scanpy==1.11.0"
]
dynamic = ["version"]

# Package discovery for the submodule
[tool.setuptools]
packages = [
    "talk2cells",
    "talk2cells.agents",
    "talk2cells.tools",
    "talk2cells.states"
]
