[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiagents4pharma-talk2knowledgegraphs"
description = "AI Agents for drug discovery, drug development, and other pharmaceutical R&D"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "coverage==7.6.4",
    "einops==0.8.0",
    "gdown==5.2.0",
    "gravis==0.1.0",
    "huggingface_hub==0.26.5",
    "hydra-core==1.3.2",
    "langchain==0.3.7",
    "langchain-community==0.3.5",
    "langchain-core==0.3.15",
    "langchain-experimental==0.3.3",
    "langchain_ollama==0.2.2",
    "joblib==1.4.2",
    "ollama==0.4.7",
    "pandas==2.2.3",
    "pcst_fast==1.0.10",
    "pubchempy==1.0.4",
    "pydantic==2.9.2",
    "pylint==3.3.1",
    "pypdf==5.2.0",
    "pytest==8.3.3",
    "pytest-asyncio-0.25.2",
    "sentence_transformers==3.3.1",
    "torch==2.2.2",
    "torch_geometric==2.6.1",
    "tqdm==4.66.6",
    "transformers==4.48.0",
    "mkdocs==1.6.1",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-material==9.5.47",
    "mkdocstrings-python==1.12.2",
    "mkdocs-include-markdown-plugin==7.1.2",
    "mkdocstrings==0.27.0"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "release_version.txt"}

# find packages
[tool.setuptools]
packages = ["aiagents4pharma",
            "aiagents4pharma.talk2knowledgegraphs",
            "aiagents4pharma.talk2knowledgegraphs.datasets",
            "aiagents4pharma.talk2knowledgegraphs.utils",
            "aiagents4pharma.talk2knowledgegraphs.utils.enrichments",
            "aiagents4pharma.talk2knowledgegraphs.utils.embeddings",
            "aiagents4pharma.talk2knowledgegraphs.utils.extractions"]
