[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talk2scholars"

description = "A submodule of AIAgents4Pharma for interacting with articles"

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "ipykernel==6.29.5",
  "ipython==8.31.0",
  "langchain-openai==0.3.0",
  "langgraph==0.2.62",
  "openai==1.59.6",
  "pandas==2.2.3",
  "pydantic==2.10.5",
  "requests==2.32.3",
  "streamlit==1.41.1",
  "tabulate==0.9.0",
]
dynamic = ["version"]

# Package discovery for the submodule
[tool.setuptools]
packages = [
  "talk2scholars",
  "talk2scholars.agents",
  "talk2scholars.tools",
  "talk2scholars.states",
]

